dynamix/force-app/main/default/objects/Project__c/fields/Budgets1__c.field-meta.xml
<CustomField>
    <fullName>Budgets1__c</fullName>
    <label>Budgets1</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Under 75 lakhs</fullName>
            </value>
            <value>
                <fullName>76 lakhs - 1.25 crs</fullName>
            </value>
            <value>
                <fullName>1.25 - 1.75 cr</fullName>
            </value>
            <value>
                <fullName>1.75 crs - 2.25 crs</fullName>
            </value>
            <value>
                <fullName>2.25 crs - 2.75 crs</fullName>
            </value>
            <value>
                <fullName>2.75 crs - 3.5 crs</fullName>
            </value>
            <value>
                <fullName>above 3.5 crs</fullName>
            </value>
            <value>
                <fullName>1 Cr</fullName>
                <isActive>false</isActive>
                <label>1 Cr</label>
            </value>
            <value>
                <fullName>1.25 Cr</fullName>
                <isActive>false</isActive>
                <label>1.25 Cr</label>
            </value>
            <value>
                <fullName>1.50 Cr</fullName>
                <isActive>false</isActive>
                <label>1.50 Cr</label>
            </value>
            <value>
                <fullName>1.75 Cr</fullName>
                <isActive>false</isActive>
                <label>1.75 Cr</label>
            </value>
            <value>
                <fullName>2 Cr</fullName>
                <isActive>false</isActive>
                <label>2 Cr</label>
            </value>
            <value>
                <fullName>2.25 Cr</fullName>
                <isActive>false</isActive>
                <label>2.25 Cr</label>
            </value>
            <value>
                <fullName>2.50 Cr+</fullName>
                <isActive>false</isActive>
                <label>2.50 Cr+</label>
            </value>
            <value>
                <fullName>75 Lac</fullName>
                <isActive>false</isActive>
                <label>75 Lac</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>