dynamix/force-app/main/default/objects/Project__c/fields/Budgets__c.field-meta.xml
<CustomField>
    <fullName>Budgets__c</fullName>
    <label>Budgets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Budget</valueSetName>
    </valueSet>
</CustomField>