dynamix/force-app/main/default/objects/Project__c/fields/Builder_Org_Signatory_Designation__c.field-meta.xml
<CustomField>
    <fullName>Builder_Org_Signatory_Designation__c</fullName>
    <inlineHelpText>Builder Organization Signatory Designation</inlineHelpText>
    <label>Builder Org. Signatory Designation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>