dynamix/force-app/main/default/objects/Project__c/fields/Builder_Organization__c.field-meta.xml
<CustomField>
    <fullName>Builder_Organization__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Builder Organization</label>
    <referenceTo>Builder_Organisation__c</referenceTo>
    <relationshipLabel>Projects</relationshipLabel>
    <relationshipName>Projects</relationshipName>
    <type>Lookup</type>
</CustomField>