dynamix/force-app/main/default/objects/Project__c/fields/Builder_Organization_Signatory_Name__c.field-meta.xml
<CustomField>
    <fullName>Builder_Organization_Signatory_Name__c</fullName>
    <label>Builder Organization Signatory Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>