dynamix/force-app/main/default/objects/Project__c/fields/CA__c.field-meta.xml
<CustomField>
    <fullName>CA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>CA</label>
    <type>Checkbox</type>
</CustomField>