dynamix/force-app/main/default/objects/Project__c/fields/CA_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>CA_Terms_Conditions__c</fullName>
    <label>CA Terms &amp; Conditions</label>
    <type>Url</type>
</CustomField>