dynamix/force-app/main/default/objects/Project__c/fields/Corpus_Fund_Per_Sq_Ft__c.field-meta.xml
<CustomField>
    <fullName>Corpus_Fund_Per_Sq_Ft__c</fullName>
    <label>Corpus Fund Per Sq.Ft.</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>