dynamix/force-app/main/default/objects/Project__c/fields/CTS_No__c.field-meta.xml
<CustomField>
    <fullName>CTS_No__c</fullName>
    <label>CTS No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>