dynamix/force-app/main/default/objects/Project__c/fields/EOI_CA_Floor__c.field-meta.xml
<CustomField>
    <fullName>EOI_CA_Floor__c</fullName>
    <label>EOI/CA Floor</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Floor</valueSetName>
    </valueSet>
</CustomField>