dynamix/force-app/main/default/objects/Project__c/fields/EOI_Terms_Conditions__c.field-meta.xml
<CustomField>
    <fullName>EOI_Terms_Conditions__c</fullName>
    <label>EOI Terms &amp; Conditions</label>
    <type>Url</type>
</CustomField>