dynamix/force-app/main/default/objects/Project__c/fields/Features__c.field-meta.xml
<CustomField>
    <fullName>Features__c</fullName>
    <label>Features</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>24 X 7 Working</fullName>
            </value>
            <value>
                <fullName>24/7 Bore Well Water</fullName>
            </value>
            <value>
                <fullName>24/7 Water Supply</fullName>
            </value>
            <value>
                <fullName>Attractive Entrance Gate</fullName>
            </value>
            <value>
                <fullName>Common Cafeteria</fullName>
            </value>
            <value>
                <fullName>Common Reception</fullName>
            </value>
            <value>
                <fullName>Lobby</fullName>
            </value>
            <value>
                <fullName>Door Video Call</fullName>
            </value>
            <value>
                <fullName>Earthquake Resistance</fullName>
            </value>
            <value>
                <fullName>Easy Access to Project - Good Roads to Connect</fullName>
            </value>
            <value>
                <fullName>Easy Public Transport</fullName>
            </value>
            <value>
                <fullName>Gated Community</fullName>
            </value>
            <value>
                <fullName>Good Ceiling Height</fullName>
            </value>
            <value>
                <fullName>Good Frontage</fullName>
            </value>
            <value>
                <fullName>Good Natural Light in the Unit</fullName>
            </value>
            <value>
                <fullName>Good No. of Common</fullName>
            </value>
            <value>
                <fullName>Visitor Parking</fullName>
            </value>
            <value>
                <fullName>Good No. of Reserved Parking</fullName>
            </value>
            <value>
                <fullName>High Quality Common Maintenance</fullName>
            </value>
            <value>
                <fullName>Higher Carpet Area – Lower Loading</fullName>
            </value>
            <value>
                <fullName>High efficiency</fullName>
            </value>
            <value>
                <fullName>Immediate Possession</fullName>
            </value>
            <value>
                <fullName>Industrial Wear-House</fullName>
            </value>
            <value>
                <fullName>Factory</fullName>
            </value>
            <value>
                <fullName>Interlock Tiled Courtyard</fullName>
            </value>
            <value>
                <fullName>Landscape Garden</fullName>
            </value>
            <value>
                <fullName>Large Window</fullName>
            </value>
            <value>
                <fullName>Natural light</fullName>
            </value>
            <value>
                <fullName>Low Maintenance Cost</fullName>
            </value>
            <value>
                <fullName>Low Traffic Area</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>