dynamix/force-app/main/default/objects/Project__c/fields/Finance_Name__c.field-meta.xml
<CustomField>
    <fullName>Finance_Name__c</fullName>
    <label>Finance Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>