dynamix/force-app/main/default/objects/Project__c/fields/First_Possession_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Possession_Date__c</fullName>
    <label>First Possession Date</label>
    <type>Date</type>
</CustomField>