dynamix/force-app/main/default/objects/Project__c/fields/FM_Head__c.field-meta.xml
<CustomField>
    <fullName>FM_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>FM Head</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects4</relationshipName>
    <type>Lookup</type>
</CustomField>