dynamix/force-app/main/default/objects/Project__c/fields/Funding_Partner_Name__c.field-meta.xml
<CustomField>
    <fullName>Funding_Partner_Name__c</fullName>
    <label>Funding Partner Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>