dynamix/force-app/main/default/objects/Project__c/fields/Geo_Coordinates__c.field-meta.xml
<CustomField>
    <fullName>Geo_Coordinates__c</fullName>
    <label>Geo Coordinates</label>
    <scale>2</scale>
    <type>Location</type>
</CustomField>