dynamix/force-app/main/default/objects/Project__c/fields/Google_Form_Review_Link__c.field-meta.xml
<CustomField>
    <fullName>Google_Form_Review_Link__c</fullName>
    <label>Google Form Review Link</label>
    <type>Url</type>
</CustomField>