dynamix/force-app/main/default/objects/Project__c/fields/GPS_location__c.field-meta.xml
<CustomField>
    <fullName>GPS_location__c</fullName>
    <label>GPS location</label>
    <type>Url</type>
</CustomField>