dynamix/force-app/main/default/objects/Project__c/fields/GST_Applicable__c.field-meta.xml
<CustomField>
    <fullName>GST_Applicable__c</fullName>
    <defaultValue>false</defaultValue>
    <label>GST Applicable</label>
    <type>Checkbox</type>
</CustomField>