dynamix/force-app/main/default/objects/Project__c/fields/Handover_Completed_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completed_Percentage__c</fullName>
    <label>Handover Completed Percentage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>