dynamix/force-app/main/default/objects/Project__c/fields/Handover_Completion__c.field-meta.xml
<CustomField>
    <fullName>Handover_Completion__c</fullName>
    <formula>(Handover_Completed_Percentage__c)/Total_Property_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Handover Completion %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>