dynamix/force-app/main/default/objects/Project__c/fields/Intimation_of_Completion_of_Unit_Check__c.field-meta.xml
<CustomField>
    <fullName>Intimation_of_Completion_of_Unit_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Intimation of Completion of Unit Check</label>
    <type>Checkbox</type>
</CustomField>