dynamix/force-app/main/default/objects/Project__c/fields/Last_Receipt_Number__c.field-meta.xml
<CustomField>
    <fullName>Last_Receipt_Number__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Last Receipt Number</label>
    <precision>7</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>