dynamix/force-app/main/default/objects/Project__c/fields/Launch_CA_Period_s_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_CA_Period_s_Start_Date__c</fullName>
    <label>Launch CA Period&apos;s Start Date</label>
    <type>Date</type>
</CustomField>