dynamix/force-app/main/default/objects/Project__c/fields/Minimum_amount_for_EOI__c.field-meta.xml
<CustomField>
    <fullName>Minimum_amount_for_EOI__c</fullName>
    <label>Minimum amount for EOI</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>