dynamix/force-app/main/default/objects/Project__c/fields/No_of_the_Months__c.field-meta.xml
<CustomField>
    <fullName>No_of_the_Months__c</fullName>
    <label>No of the Months</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>