dynamix/force-app/main/default/objects/Project__c/fields/Number_of_Bookings__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Bookings__c</fullName>
    <label>Number of Bookings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>