dynamix/force-app/main/default/objects/Project__c/fields/OC_Number__c.field-meta.xml
<CustomField>
    <fullName>OC_Number__c</fullName>
    <label>OC Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>