dynamix/force-app/main/default/objects/Project__c/fields/OC_Receival_Date__c.field-meta.xml
<CustomField>
    <fullName>OC_Receival_Date__c</fullName>
    <label>OC Receival Date</label>
    <type>Date</type>
</CustomField>