dynamix/force-app/main/default/objects/Project__c/fields/OTP_Disable_Till__c.field-meta.xml
<CustomField>
    <fullName>OTP_Disable_Till__c</fullName>
    <label>OTP Disable Till</label>
    <type>DateTime</type>
</CustomField>