dynamix/force-app/main/default/objects/Project__c/fields/Partner_funded__c.field-meta.xml
<CustomField>
    <fullName>Partner_funded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Partner funded</label>
    <type>Checkbox</type>
</CustomField>