dynamix/force-app/main/default/objects/Project__c/fields/Per_Sq_ft_for_the_SMD__c.field-meta.xml
<CustomField>
    <fullName>Per_Sq_ft_for_the_SMD__c</fullName>
    <label>Per Sq.ft for the SMD</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>