dynamix/force-app/main/default/objects/Project__c/fields/Possession_Other_Charges_Narration__c.field-meta.xml
<CustomField>
    <fullName>Possession_Other_Charges_Narration__c</fullName>
    <label>Possession/Other Charges Narration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>