dynamix/force-app/main/default/objects/Project__c/fields/Post_Sales_Head__c.field-meta.xml
<CustomField>
    <fullName>Post_Sales_Head__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Post Sales Head</label>
    <lookupFilter>
        <active>false</active>
        <filterItems>
            <field>User.Profile.Name</field>
            <operation>equals</operation>
            <value>Post Sales</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>Projects1</relationshipName>
    <type>Lookup</type>
</CustomField>