dynamix/force-app/main/default/objects/Project__c/fields/Project_Area_in_sqyrds__c.field-meta.xml
<CustomField>
    <fullName>Project_Area_in_sqyrds__c</fullName>
    <formula>Project_Area_in_sqft__c /9</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Area (in sqyrds.)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>