dynamix/force-app/main/default/objects/Project__c/fields/Project_Brochure__c.field-meta.xml
<CustomField>
    <fullName>Project_Brochure__c</fullName>
    <label>Project Brochure</label>
    <type>Url</type>
</CustomField>