dynamix/force-app/main/default/objects/Project__c/fields/Project_Carpet_Area__c.field-meta.xml
<CustomField>
    <fullName>Project_Carpet_Area__c</fullName>
    <label>Project Carpet Area</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Carpet_Area</valueSetName>
    </valueSet>
</CustomField>