dynamix/force-app/main/default/objects/Project__c/fields/Project_Email__c.field-meta.xml
<CustomField>
    <fullName>Project_Email__c</fullName>
    <label>Project Email</label>
    <type>Email</type>
</CustomField>