dynamix/force-app/main/default/objects/Project__c/fields/Project_Footer__c.field-meta.xml
<CustomField>
    <fullName>Project_Footer__c</fullName>
    <label>Project Footer</label>
    <type>Url</type>
</CustomField>