dynamix/force-app/main/default/objects/Project__c/fields/Project_Header__c.field-meta.xml
<CustomField>
    <fullName>Project_Header__c</fullName>
    <label>Project Header</label>
    <type>Url</type>
</CustomField>