dynamix/force-app/main/default/objects/Project__c/fields/Project_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Id__c</fullName>
    <externalId>true</externalId>
    <label>Anarcok Project Id</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>