dynamix/force-app/main/default/objects/Project__c/fields/Project_Initials__c.field-meta.xml
<CustomField>
    <fullName>Project_Initials__c</fullName>
    <label>Project Initials</label>
    <length>255</length>
    <type>Text</type>
</CustomField>