dynamix/force-app/main/default/objects/Project__c/fields/Project_Link__c.field-meta.xml
<CustomField>
    <fullName>Project_Link__c</fullName>
    <label>Website Link</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>