dynamix/force-app/main/default/objects/Project__c/fields/Project_Phone__c.field-meta.xml
<CustomField>
    <fullName>Project_Phone__c</fullName>
    <label>Project Phone</label>
    <length>255</length>
    <type>Text</type>
</CustomField>