dynamix/force-app/main/default/objects/Project__c/fields/Project_SalesforceId__c.field-meta.xml
<CustomField>
    <fullName>Project_SalesforceId__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Id</label>
    <type>Text</type>
</CustomField>