dynamix/force-app/main/default/objects/Project__c/fields/Project_SAP_Code__c.field-meta.xml
<CustomField>
    <fullName>Project_SAP_Code__c</fullName>
    <label>Project SAP Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>