dynamix/force-app/main/default/objects/Project__c/fields/Project_Unique_Id__c.field-meta.xml
<CustomField>
    <fullName>Project_Unique_Id__c</fullName>
    <formula>Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Unique Id</label>
    <type>Text</type>
</CustomField>