dynamix/force-app/main/default/objects/Project__c/fields/Project_videos__c.field-meta.xml
<CustomField>
    <fullName>Project_videos__c</fullName>
    <label>Project videos</label>
    <type>Url</type>
</CustomField>