dynamix/force-app/main/default/objects/Project__c/fields/Rera_Date__c.field-meta.xml
<CustomField>
    <fullName>Rera_Date__c</fullName>
    <label>Rera Date</label>
    <type>Date</type>
</CustomField>