dynamix/force-app/main/default/objects/Project__c/fields/Security_and_Share_Money_Narration__c.field-meta.xml
<CustomField>
    <fullName>Security_and_Share_Money_Narration__c</fullName>
    <label>Security and Share Money Narration</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>