dynamix/force-app/main/default/objects/Project__c/fields/Show_flat_walkthrough_video__c.field-meta.xml
<CustomField>
    <fullName>Show_flat_walkthrough_video__c</fullName>
    <label>Show flat walkthrough video</label>
    <type>Url</type>
</CustomField>