dynamix/force-app/main/default/objects/Project__c/fields/Skip_Pre_OC__c.field-meta.xml
<CustomField>
    <fullName>Skip_Pre_OC__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Skip Pre-OC</label>
    <type>Checkbox</type>
</CustomField>