dynamix/force-app/main/default/objects/Project__c/fields/Sublocation__c.field-meta.xml
<CustomField>
    <fullName>Sublocation__c</fullName>
    <label>Sublocation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>