dynamix/force-app/main/default/objects/Project__c/fields/Survey_No__c.field-meta.xml
<CustomField>
    <fullName>Survey_No__c</fullName>
    <label>Survey No.</label>
    <length>255</length>
    <type>Text</type>
</CustomField>