dynamix/force-app/main/default/objects/Project__c/fields/Transfer_Charges__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Charges__c</fullName>
    <inlineHelpText>Per Sq.meter</inlineHelpText>
    <label>Transfer Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>